--- a/assistants_cards.html
+++ b/assistants_cards.html
@@ -33,7 +33,9 @@ body {background-color: var(--dark-bg); color: var(--text-color); font-family:'S
 .contact-btn, .comments-btn { background-color:var(--green-success); color:var(--dark-bg); padding:10px; width:100%; border:none; border-radius:6px; font-weight:bold; margin-top:10px; cursor:pointer; transition: background-color 0.3s; }
 .contact-btn:hover, .comments-btn:hover { background-color:#388e3c; }
 .role-title { text-align:center; color:var(--white); background-color:var(--blue-royal); padding:10px; border-radius:8px; margin-bottom:20px; }
-.comment-section { display:none; background-color:#1f1f1f; padding:10px; border-radius:6px; margin-top:10px; max-height:300px; overflow-y:auto; }
+.modal-bg { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.8); z-index:1000; justify-content:center; align-items:center; }
+.modal-content { background:#1f1f1f; padding:20px; border-radius:10px; width:90%; max-width:500px; max-height:80%; overflow-y:auto; position:relative; }
+.close-modal { position:absolute; top:10px; right:10px; background:var(--red-emergency); color:#fff; border:none; border-radius:50%; width:25px; height:25px; cursor:pointer; }
 .comment-item { margin-bottom:8px; line-height:1.3em; padding-bottom:5px; border-bottom:1px dashed #444; }
 .comment-name { font-weight:bold; color:var(--gold); display:block; margin-bottom:2px; }
 .comment-stars { display:block; color:var(--yellow-warning); margin-bottom:2px; }
@@ -53,9 +55,28 @@ body {background-color: var(--dark-bg); color: var(--text-color); font-family:'S
     <div id="assistantCardsGrid" class="cards-grid"></div>
 </div>
 
+<!-- مودل التعليقات -->
+<div id="commentsModal" class="modal-bg">
+    <div class="modal-content">
+        <button class="close-modal" onclick="closeCommentsModal()">×</button>
+        <h3 id="modalAssistantName"></h3>
+        <div id="modalCommentsList"></div>
+        <input type="text" placeholder="أدخل اسمك..." id="modalCommentName" class="comment-input">
+        <input type="text" placeholder="أضف تعليقاً..." id="modalCommentText" class="comment-input">
+        <select id="modalCommentRating" class="rating-select">
+            <option value="1">⭐ 1</option>
+            <option value="2">⭐ 2</option>
+            <option value="3">⭐ 3</option>
+            <option value="4">⭐ 4</option>
+            <option value="5" selected>⭐ 5</option>
+        </select>
+        <button onclick="submitModalComment()" class="comment-submit">إرسال التعليق</button>
+    </div>
+</div>
+
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
-import { getDatabase, ref, get, push, set, child, onValue } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js";
+import { getDatabase, ref, get, push, set, onValue } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyDpVqFWJfB4rA2-NA4QIl1w07e2LFQaYic",
@@ -76,6 +97,9 @@ const ROLES = {
     DRIVER: {key:"DRIVER", name:"سائق نقل خاص"}
 };
 
+const keyMap = { GUIDE:'assistants_guides', COMPANION:'assistants_companions', DRIVER:'assistants_drivers' };
+
+// ⭐ الدوال المساعدة
 function renderStars(rating){
     let stars='';
     for(let i=1;i<=5;i++) stars+=i<=rating?'⭐':'☆';
@@ -91,93 +115,52 @@ function getMajorityRating(comments){
     return majority;
 }
 
-const urlParams = new URLSearchParams(window.location.search);
-const roleKey = urlParams.get('role');
-
-const keyMap = { GUIDE:'assistants_guides', COMPANION:'assistants_companions', DRIVER:'assistants_drivers' };
-
-function loadComments(code){
-    const div=document.querySelector(`#comments-${code} .comments-list`);
+// المودل
+let currentModalCode = null;
+function openCommentsModal(code,name){
+    currentModalCode=code;
+    document.getElementById('modalAssistantName').textContent=name;
+    loadModalComments(code);
+    document.getElementById('commentsModal').style.display='flex';
+}
+function closeCommentsModal(){
+    document.getElementById('commentsModal').style.display='none';
+    currentModalCode=null;
+}
+function loadModalComments(code){
+    const div=document.getElementById('modalCommentsList');
     div.innerHTML='';
-    const commentsRef = ref(db, `assistantComments/${code}`);
-    onValue(commentsRef, snapshot => {
-        div.innerHTML='';
-        snapshot.forEach(snap=>{
-            const c = snap.val();
-            const el=document.createElement('div');
-            el.className='comment-item';
-            el.innerHTML=`<span class="comment-name">${c.name||'زائر'}</span><span class="comment-stars">${'⭐'.repeat(c.rating)}</span><span class="comment-text">${c.text}</span>`;
-            div.appendChild(el);
-        });
+    let comments = JSON.parse(localStorage.getItem(`comments_${code}`)) || [];
+    comments.slice(-20).forEach(c=>{
+        const el=document.createElement('div');
+        el.className='comment-item';
+        el.innerHTML=`<span class="comment-name">${c.name||'زائر'}</span><span class="comment-stars">${'⭐'.repeat(c.rating)}</span><span class="comment-text">${c.text}</span>`;
+        div.appendChild(el);
     });
 }
-
-// عند جلب المساعدين من Firebase
-async function renderCards(snapshot, roleTitle){
-    const grid = document.getElementById('assistantCardsGrid');
-    grid.innerHTML='';
-    document.getElementById('roleTitleDisplay').textContent = roleTitle;
-
-    if(!snapshot.exists()){
-        grid.innerHTML='<p style="text-align:center;color:#aaa;">لا يوجد مساعدون متاحون حالياً لهذا الدور.</p>';
-        return;
-    }
-
-    Object.entries(snapshot.val()).forEach(([appId, a])=>{
-        // appId هو المفتاح، وبالتالي هو chatCode
-        const card = document.createElement('div');
-        card.className='assistant-card';
-        card.setAttribute('data-id', appId);
-
-        card.innerHTML=`
-            <div class="card-header">
-                <img src="${a.img||'images/placeholder_profile.png'}" class="profile-img" alt="${a.name}">
-                <div>
-                    <h3>${a.name}</h3>
-                    <div class="rating">${renderStars(getMajorityRating(a.comments))}</div>
-                    <div>(${a.experience || 0} سنوات خبرة)</div>
-                </div>
-            </div>
-            <div class="card-details"><p><strong>نبذة:</strong> ${a.about}</p></div>
-            <button class="contact-btn" onclick="startChat('${appId}','${a.name}')">💬 تواصل الآن</button>
-            <button class="comments-btn" onclick="toggleComments('${appId}')">💬 التعليقات</button>
-            <div class="comment-section" id="comments-${appId}">
-                <div class="comments-list"></div>
-                <input type="text" placeholder="أدخل اسمك..." class="comment-input" id="comment-name-${appId}">
-                <input type="text" placeholder="أضف تعليقاً..." class="comment-input" id="comment-input-${appId}">
-                <select class="rating-select" id="comment-rating-${appId}">
-                    <option value="1">⭐ 1</option>
-                    <option value="2">⭐ 2</option>
-                    <option value="3">⭐ 3</option>
-                    <option value="4">⭐ 4</option>
-                    <option value="5" selected>⭐ 5</option>
-                </select>
-                <button class="comment-submit" onclick="submitComment('${appId}')">إرسال التعليق</button>
-            </div>
-        `;
-        grid.appendChild(card);
-        loadComments(appId);
-    });
-}
-}
-
-function submitComment(code){
-    const nameInput=document.getElementById(`comment-name-${code}`);
-    const textInput=document.getElementById(`comment-input-${code}`);
-    const ratingSelect=document.getElementById(`comment-rating-${code}`);
-    const name=nameInput.value.trim()||"زائر";
-    const text=textInput.value.trim();
-    const rating=parseInt(ratingSelect.value);
+function submitModalComment(){
+    if(!currentModalCode) return;
+    const name = document.getElementById('modalCommentName').value.trim() || "زائر";
+    const text = document.getElementById('modalCommentText').value.trim();
+    const rating = parseInt(document.getElementById('modalCommentRating').value);
     if(!text) return;
-    const newCommentRef = push(ref(db, `assistantComments/${code}`));
-    set(newCommentRef, {name,text,rating});
-    nameInput.value=''; textInput.value=''; ratingSelect.value='5';
+    const comment = {name,text,rating};
+    const localKey = `comments_${currentModalCode}`;
+    const existing = JSON.parse(localStorage.getItem(localKey)) || [];
+    existing.push(comment);
+    localStorage.setItem(localKey, JSON.stringify(existing));
+
+    // حفظ في Firebase
+    const newRef = push(ref(db, `assistantComments/${currentModalCode}`));
+    set(newRef, comment);
+
+    document.getElementById('modalCommentName').value='';
+    document.getElementById('modalCommentText').value='';
+    document.getElementById('modalCommentRating').value='5';
+    loadModalComments(currentModalCode);
 }
 
-function toggleComments(code){ const sec=document.getElementById(`comments-${code}`); sec.style.display=sec.style.display==='block'?'none':'block'; }
-
-function startChat(code,name){ window.location.href=`chat_page.html?code=${code}&name=${encodeURIComponent(name)}`; }
-
+// عرض البطاقات
 async function renderCards(assistantsList,title){
     document.getElementById('roleTitleDisplay').textContent = title;
     const grid = document.getElementById('assistantCardsGrid');
@@ -187,53 +170,64 @@ async function renderCards(assistantsList,title){
         const card = document.createElement('div');
         card.className='assistant-card';
         card.setAttribute('data-id', a.chatCode);
+
         let details='';
-        if(a.groupLimit){ details+=`<p><strong>التخصص:</strong> ${a.guideType||'عام'}</p>`; details+=`<p><strong>حد المجموعة:</strong> ${a.groupLimit} شخص</p>`; details+=`<p><strong>سعر اليوم:</strong> ${a.price} درهم</p>`; }
-        else if(a.specialization){ details+=`<p><strong>التخصص:</strong> ${a.specialization}</p>`; details+=`<p><strong>سعر اليوم:</strong> ${a.priceDay} درهم</p>`; details+=`<p><strong>سعر الساعة:</strong> ${a.priceHour} درهم</p>`; }
-        else if(a.cityPrice){ details+=`<p><strong>أجرة المدينة:</strong> ${a.cityPrice} درهم</p>`; details+=`<p><strong>أجرة خارج المدينة:</strong> ${a.outCityPrice} درهم</p>`; }
+        if(a.groupLimit){ details+=`<p><strong>التخصص:</strong> ${a.guideType||'عام'}</p><p><strong>حد المجموعة:</strong> ${a.groupLimit} شخص</p><p><strong>سعر اليوم:</strong> ${a.price} درهم</p>`; }
+        else if(a.specialization){ details+=`<p><strong>التخصص:</strong> ${a.specialization}</p><p><strong>سعر اليوم:</strong> ${a.priceDay} درهم</p><p><strong>سعر الساعة:</strong> ${a.priceHour} درهم</p>`; }
+        else if(a.cityPrice){ details+=`<p><strong>أجرة المدينة:</strong> ${a.cityPrice} درهم</p><p><strong>أجرة خارج المدينة:</strong> ${a.outCityPrice} درهم</p>`; }
+
+        const comments = JSON.parse(localStorage.getItem(`comments_${a.chatCode}`)) || [];
+        const majorityRating = getMajorityRating(comments);
+        const ratingHTML=`<div class="rating">${renderStars(majorityRating)}</div><div>(${a.experience} سنوات خبرة)</div>`;
 
         card.innerHTML=`
             <div class="card-header">
                 <img src="${a.img||'images/placeholder_profile.png'}" class="profile-img" alt="${a.name}">
                 <div>
                     <h3>${a.name}</h3>
-                    <div class="rating">${renderStars(getMajorityRating(a.comments))}</div>
-                    <div>(${a.experience} سنوات خبرة)</div>
+                    ${ratingHTML}
                 </div>
             </div>
             <div class="card-details">${details}<p><strong>نبذة:</strong> ${a.about}</p></div>
-            <button class="contact-btn" onclick="startChat('${a.chatCode}','')">💬 تواصل الآن</button>
-            <button class="comments-btn" onclick="toggleComments('${a.chatCode}')">💬 التعليقات</button>
-            <div class="comment-section" id="comments-${a.chatCode}">
-                <div class="comments-list"></div>
-                <input type="text" placeholder="أدخل اسمك..." class="comment-input" id="comment-name-${a.chatCode}">
-                <input type="text" placeholder="أضف تعليقاً..." class="comment-input" id="comment-input-${a.chatCode}">
-                <select class="rating-select" id="comment-rating-${a.chatCode}">
-                    <option value="1">⭐ 1</option>
-                    <option value="2">⭐ 2</option>
-                    <option value="3">⭐ 3</option>
-                    <option value="4">⭐ 4</option>
-                    <option value="5" selected>⭐ 5</option>
-                </select>
-                <button class="comment-submit" onclick="submitComment('${a.chatCode}')">إرسال التعليق</button>
-            </div>
+            <button class="contact-btn" onclick="startChat('${a.chatCode}','${a.name}')">💬 تواصل الآن</button>
+            <button class="comments-btn" onclick="openCommentsModal('${a.chatCode}','${a.name}')">💬 التعليقات</button>
         `;
         grid.appendChild(card);
-        loadComments(a.chatCode);
     });
 }
 
-document.addEventListener('DOMContentLoaded', async () => {
+// جلب البيانات مع التخزين في localStorage
+document.addEventListener('DOMContentLoaded', async()=>{
+    const urlParams = new URLSearchParams(window.location.search);
+    const roleKey = urlParams.get('role');
+
+    const storageKey = roleKey ? `assistants_${roleKey}` : 'assistants_all';
+    let cachedData = JSON.parse(localStorage.getItem(storageKey));
+
+    if(cachedData){
+        renderCards(cachedData, roleKey ? ROLES[roleKey].name : "جميع المساعدين المتاحين");
+    }
+
+    // Fetch من Firebase
     if(roleKey){
-        const snapshot = await get(ref(db,keyMap[roleKey]));
-        renderCards(snapshot.exists()?Object.values(snapshot.val()):[],ROLES[roleKey].name);
+        const snap = await get(ref(db,keyMap[roleKey]));
+        if(snap.exists()){
+            const data = Object.values(snap.val());
+            localStorage.setItem(storageKey, JSON.stringify(data));
+            renderCards(data, ROLES[roleKey].name);
+        }
     } else {
         const guides = (await get(ref(db,'assistants_guides'))).val() || {};
         const companions = (await get(ref(db,'assistants_companions'))).val() || {};
         const drivers = (await get(ref(db,'assistants_drivers'))).val() || {};
-        renderCards([...Object.values(guides),...Object.values(companions),...Object.values(drivers)],"جميع المساعدين المتاحين");
+        const data = [...Object.values(guides),...Object.values(companions),...Object.values(drivers)];
+        localStorage.setItem(storageKey, JSON.stringify(data));
+        renderCards(data, "جميع المساعدين المتاحين");
     }
 });
+
+function startChat(code,name){ window.location.href=`chat_page.html?code=${code}&name=${encodeURIComponent(name)}`; }
+
 </script>
 </body>
 </html>
